--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
   <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
+  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="var" path="M2_REPO/javax/xml/jaxrpc-api/1.1/jaxrpc-api-1.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/portlet/portlet-api/2.0/portlet-api-2.0.jar"/>
@@ -17,15 +18,25 @@
   <classpathentry kind="var" path="M2_REPO/xml-apis/xml-apis/1.3.04/xml-apis-1.3.04.jar"/>
   <classpathentry kind="var" path="M2_REPO/xerces/xercesImpl/2.6.2/xercesImpl-2.6.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/geronimo/specs/geronimo-stax-api_1.0_spec/1.0.1/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
-  <classpathentry kind="src" path="/cvrg-analysisHub"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-analysisHub/1.0-SNAPSHOT/cvrg-analysisHub-1.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.3/commons-lang-2.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jdom/jdom/1.1/jdom-1.1.jar"/>
-  <classpathentry kind="src" path="/liferay-ws-client"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/icm/ecgFormatConverter/1.0-SNAPSHOT/ecgFormatConverter-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jfree/jfreechart/1.0.9/jfreechart-1.0.9.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jfree/jcommon/1.0.12/jcommon-1.0.12.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/xmlbeans/xmlbeans/2.4.0/xmlbeans-2.4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/stax/stax-api/1.0.1/stax-api-1.0.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/pcj/pcj/1.2/pcj-1.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sierraecg/jsierraecg/1.0-SNAPSHOT/jsierraecg-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/cvrgrid/philips/philips1.04/1.0-SNAPSHOT/philips1.04-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/cvrgrid/schiller/schiller-data/1.0-SNAPSHOT/schiller-data-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/hl7OrgV3/aecg/1.0/aecg-1.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/liferay/liferay-ws-client/1.0-SNAPSHOT/liferay-ws-client-1.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/axis/axis/1.4/axis-1.4.jar"/>
-  <classpathentry kind="src" path="/waveform-utilities"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/waveform/waveform-utilities/1.0-SNAPSHOT/waveform-utilities-1.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/axis2/axis2/1.4.1/axis2-1.4.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/primefaces/primefaces/4.0/primefaces-4.0.jar"/>
-  <classpathentry kind="src" path="/cvrg-dataStorage"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-dataStorage/1.0-SNAPSHOT/cvrg-dataStorage-1.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-core/4.2.8.Final/hibernate-core-4.2.8.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging/3.1.0.GA/jboss-logging-3.1.0.GA.jar"/>
@@ -37,7 +48,7 @@
   <classpathentry kind="var" path="M2_REPO/org/postgresql/postgresql/9.3-1100-jdbc4/postgresql-9.3-1100-jdbc4.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1.jar" sourcepath="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1-sources.jar">
     <attributes>
-      <attribute value="jar:file:M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/avilard4/.m2/repository/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-portal/3.1.0-ga1/liferay-faces-portal-3.1.0-ga1.jar"/>
@@ -47,4 +58,5 @@
   <classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-impl/2.1.3-b02/jsf-impl-2.1.3-b02.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-util/3.1.0-ga1/liferay-faces-util-3.1.0-ga1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/json/json/20090211/json-20090211.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-annotations/1.0-SNAPSHOT/cvrg-annotations-1.0-SNAPSHOT.jar"/>
 </classpath>
