--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,16 @@
   		<artifactId>waveform-utilities</artifactId>
 	    <version>1.0-SNAPSHOT</version>
 	</dependency>
+	<dependency>
+		<groupId>edu.jhu.icm</groupId>
+		<artifactId>ecgFormatConverter</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+		<groupId>edu.jhu.cvrg</groupId>
+  		<artifactId>cvrg-annotations</artifactId>
+  		<version>1.0-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
   
   <build>
