--- a/.project
+++ b/.project
@@ -2,7 +2,17 @@
 <projectDescription>
   <name>cvrg-services</name>
   <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
-  <projects/>
+  <projects>
+    <project>cvrg-analysisHub</project>
+    <project>ECG_Converter4</project>
+    <project>jsierraecg</project>
+    <project>Phlilips1.04</project>
+    <project>schiller-data</project>
+    <project>liferay-ws-client</project>
+    <project>waveform-utilities</project>
+    <project>cvrg-dataStorage</project>
+    <project>cvrg-annotations</project>
+  </projects>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
