--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 		<groupId>edu.jhu.icm</groupId>
 		<artifactId>ECG_Converter4</artifactId>
 		<version>1.0-SNAPSHOT</version>
+		<scope>provided</scope>
 	</dependency>
 	<dependency>
 		<groupId>edu.jhu.cvrg</groupId>
