--- a/.classpath
+++ b/.classpath
@@ -1,62 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
-	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
-	<classpathentry excluding="**/*.java" kind="src" path="src/main/resources"/>
-	<classpathentry kind="var" path="M2_REPO/javax/xml/jaxrpc-api/1.1/jaxrpc-api-1.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="M2_REPO/junit/junit/4.11/junit-4.11.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/ws/commons/axiom/axiom-api/1.2.7/axiom-api-1.2.7.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/geronimo/specs/geronimo-activation_1.1_spec/1.0.1/geronimo-activation_1.1_spec-1.0.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/geronimo/specs/geronimo-javamail_1.4_spec/1.2/geronimo-javamail_1.4_spec-1.2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/jaxen/jaxen/1.1.1/jaxen-1.1.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/xml-apis/xml-apis/1.3.04/xml-apis-1.3.04.jar"/>
-	<classpathentry kind="var" path="M2_REPO/xerces/xercesImpl/2.6.2/xercesImpl-2.6.2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/geronimo/specs/geronimo-stax-api_1.0_spec/1.0.1/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-analysisHub/1.0-SNAPSHOT/cvrg-analysisHub-1.0-SNAPSHOT.jar" sourcepath="/cvrg-analysisHub"/>
-	<classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.3/commons-lang-2.3.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/jdom/jdom/1.1/jdom-1.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/edu/jhu/icm/ECG_Converter4/1.0-SNAPSHOT/ECG_Converter4-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/jfree/jfreechart/1.0.9/jfreechart-1.0.9.jar"/>
-	<classpathentry kind="var" path="M2_REPO/jfree/jcommon/1.0.12/jcommon-1.0.12.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/xmlbeans/xmlbeans/2.4.0/xmlbeans-2.4.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/stax/stax-api/1.0.1/stax-api-1.0.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/pcj/pcj/1.2/pcj-1.2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/hl7OrgV3/aecg/1.0/aecg-1.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-dataStorage/1.0-SNAPSHOT/cvrg-dataStorage-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-core/4.2.8.Final/hibernate-core-4.2.8.Final.jar"/>
-	<classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging/3.1.0.GA/jboss-logging-3.1.0.GA.jar"/>
-	<classpathentry kind="var" path="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/javassist/javassist/3.18.1-GA/javassist-3.18.1-GA.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/jboss/spec/javax/transaction/jboss-transaction-api_1.1_spec/1.0.1.Final/jboss-transaction-api_1.1_spec-1.0.1.Final.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/hibernate/javax/persistence/hibernate-jpa-2.0-api/1.0.1.Final/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/hibernate/common/hibernate-commons-annotations/4.0.2.Final/hibernate-commons-annotations-4.0.2.Final.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/postgresql/postgresql/9.3-1100-jdbc4/postgresql-9.3-1100-jdbc4.jar"/>
-	<classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/liferay/liferay-ws-client/1.0-SNAPSHOT/liferay-ws-client-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/axis/axis/1.4/axis-1.4.jar"/>
-	<classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/waveform/waveform-utilities/1.0-SNAPSHOT/waveform-utilities-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/axis2/axis2/1.4.1/axis2-1.4.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/primefaces/primefaces/4.0/primefaces-4.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/json/json/20090211/json-20090211.jar"/>
-	<classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-filestore/2.0-SNAPSHOT/cvrg-filestore-2.0-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-portal/3.1.0-ga1/liferay-faces-portal-3.1.0-ga1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-bridge-impl/3.1.0-ga1/liferay-faces-bridge-impl-3.1.0-ga1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-bridge-api/3.1.0-ga1/liferay-faces-bridge-api-3.1.0-ga1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-api/2.1.3-b02/jsf-api-2.1.3-b02.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-impl/2.1.3-b02/jsf-impl-2.1.3-b02.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-util/3.1.0-ga1/liferay-faces-util-3.1.0-ga1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1.jar" sourcepath="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/home/avilard4/.m2/repository/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-annotations/1.0-SNAPSHOT/cvrg-annotations-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/sierraecg/jsierraecg/1.0-SNAPSHOT/jsierraecg-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/cvrgrid/philips/Phlilips1.04/1.0-SNAPSHOT/Phlilips1.04-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/cvrgrid/schiller/schiller-data/1.0-SNAPSHOT/schiller-data-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
+  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
+  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="var" path="M2_REPO/javax/xml/jaxrpc-api/1.1/jaxrpc-api-1.1.jar"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/4.11/junit-4.11.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/ws/commons/axiom/axiom-api/1.2.7/axiom-api-1.2.7.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/geronimo/specs/geronimo-activation_1.1_spec/1.0.1/geronimo-activation_1.1_spec-1.0.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/geronimo/specs/geronimo-javamail_1.4_spec/1.2/geronimo-javamail_1.4_spec-1.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jaxen/jaxen/1.1.1/jaxen-1.1.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/xml-apis/xml-apis/1.3.04/xml-apis-1.3.04.jar"/>
+  <classpathentry kind="var" path="M2_REPO/xerces/xercesImpl/2.6.2/xercesImpl-2.6.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/geronimo/specs/geronimo-stax-api_1.0_spec/1.0.1/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-analysisHub/1.0-SNAPSHOT/cvrg-analysisHub-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.3/commons-lang-2.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jdom/jdom/1.1/jdom-1.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-dataStorage/1.0-SNAPSHOT/cvrg-dataStorage-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-core/4.2.8.Final/hibernate-core-4.2.8.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging/3.1.0.GA/jboss-logging-3.1.0.GA.jar"/>
+  <classpathentry kind="var" path="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/javassist/javassist/3.18.1-GA/javassist-3.18.1-GA.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/spec/javax/transaction/jboss-transaction-api_1.1_spec/1.0.1.Final/jboss-transaction-api_1.1_spec-1.0.1.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hibernate/javax/persistence/hibernate-jpa-2.0-api/1.0.1.Final/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hibernate/common/hibernate-commons-annotations/4.0.2.Final/hibernate-commons-annotations-4.0.2.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/postgresql/postgresql/9.3-1100-jdbc4/postgresql-9.3-1100-jdbc4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/liferay/liferay-ws-client/1.0-SNAPSHOT/liferay-ws-client-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/axis/axis/1.4/axis-1.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/waveform/waveform-utilities/1.0-SNAPSHOT/waveform-utilities-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/axis2/axis2/1.4.1/axis2-1.4.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/primefaces/primefaces/4.0/primefaces-4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/json/json/20090211/json-20090211.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-filestore/2.0-SNAPSHOT/cvrg-filestore-2.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-portal/3.1.0-ga1/liferay-faces-portal-3.1.0-ga1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-bridge-impl/3.1.0-ga1/liferay-faces-bridge-impl-3.1.0-ga1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-bridge-api/3.1.0-ga1/liferay-faces-bridge-api-3.1.0-ga1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-api/2.1.3-b02/jsf-api-2.1.3-b02.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-impl/2.1.3-b02/jsf-impl-2.1.3-b02.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-util/3.1.0-ga1/liferay-faces-util-3.1.0-ga1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1.jar" sourcepath="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1-sources.jar" />
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/icm/ECG_Converter4/1.0-SNAPSHOT/ECG_Converter4-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jfree/jfreechart/1.0.9/jfreechart-1.0.9.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jfree/jcommon/1.0.12/jcommon-1.0.12.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/xmlbeans/xmlbeans/2.4.0/xmlbeans-2.4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/stax/stax-api/1.0.1/stax-api-1.0.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/pcj/pcj/1.2/pcj-1.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-annotations/1.0-SNAPSHOT/cvrg-annotations-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sierraecg/jsierraecg/1.0-SNAPSHOT/jsierraecg-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/cvrgrid/philips/Phlilips1.04/1.0-SNAPSHOT/Phlilips1.04-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/cvrgrid/schiller/schiller-data/1.0-SNAPSHOT/schiller-data-1.0-SNAPSHOT.jar"/>
 </classpath>
