--- a/.classpath
+++ b/.classpath
@@ -36,20 +36,22 @@
   <classpathentry kind="var" path="M2_REPO/org/apache/axis2/axis2/1.4.1/axis2-1.4.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/primefaces/primefaces/4.0/primefaces-4.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/json/json/20090211/json-20090211.jar"/>
-  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-filestore/2.0-SNAPSHOT/cvrg-filestore-2.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-filestore/2.0.1-SNAPSHOT/cvrg-filestore-2.0.1-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-portal/3.1.0-ga1/liferay-faces-portal-3.1.0-ga1.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-bridge-impl/3.1.0-ga1/liferay-faces-bridge-impl-3.1.0-ga1.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-bridge-api/3.1.0-ga1/liferay-faces-bridge-api-3.1.0-ga1.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-api/2.1.3-b02/jsf-api-2.1.3-b02.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-impl/2.1.3-b02/jsf-impl-2.1.3-b02.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-util/3.1.0-ga1/liferay-faces-util-3.1.0-ga1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1.jar" sourcepath="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1-sources.jar" />
-  <classpathentry kind="var" path="M2_REPO/edu/jhu/icm/ECG_Converter4/1.0-SNAPSHOT/ECG_Converter4-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1.jar" sourcepath="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/icm/cvrg-ecg-converter/1.5.2-SNAPSHOT/cvrg-ecg-converter-1.5.2-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/jfree/jfreechart/1.0.9/jfreechart-1.0.9.jar"/>
   <classpathentry kind="var" path="M2_REPO/jfree/jcommon/1.0.12/jcommon-1.0.12.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/xmlbeans/xmlbeans/2.4.0/xmlbeans-2.4.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/stax/stax-api/1.0.1/stax-api-1.0.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/pcj/pcj/1.2/pcj-1.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/cvrgrid/hl7aecg/hl7aECG/1.1-SNAPSHOT/hl7aECG-1.1-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/hl7OrgV3/aecg/1.0/aecg-1.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-annotations/1.0-SNAPSHOT/cvrg-annotations-1.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/sierraecg/jsierraecg/1.0-SNAPSHOT/jsierraecg-1.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/cvrgrid/philips/Phlilips1.04/1.0-SNAPSHOT/Phlilips1.04-1.0-SNAPSHOT.jar"/>
