--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,9 @@
 	</dependency>
 	<dependency>
 		<groupId>edu.jhu.icm</groupId>
-		<artifactId>ECG_Converter4</artifactId>
-		<version>1.0-SNAPSHOT</version>
-		<scope>provided</scope>
-	</dependency>
+		<artifactId>cvrg-ecg-converter</artifactId>
+		<version>1.5.2-SNAPSHOT</version>
+  	</dependency>
 	<dependency>
 		<groupId>edu.jhu.cvrg</groupId>
   		<artifactId>cvrg-annotations</artifactId>
