--- a/.classpath
+++ b/.classpath
@@ -20,7 +20,7 @@
   <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-analysisHub/1.0-SNAPSHOT/cvrg-analysisHub-1.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.3/commons-lang-2.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jdom/jdom/1.1/jdom-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-dataStorage/1.0-SNAPSHOT/cvrg-dataStorage-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-dataStorage/1.2-SNAPSHOT/cvrg-dataStorage-1.2-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-core/4.2.8.Final/hibernate-core-4.2.8.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging/3.1.0.GA/jboss-logging-3.1.0.GA.jar"/>
@@ -43,8 +43,8 @@
   <classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-api/2.1.3-b02/jsf-api-2.1.3-b02.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-impl/2.1.3-b02/jsf-impl-2.1.3-b02.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/liferay/faces/liferay-faces-util/3.1.0-ga1/liferay-faces-util-3.1.0-ga1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1.jar" sourcepath="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/edu/jhu/icm/cvrg-ecg-converter/1.5.2-SNAPSHOT/cvrg-ecg-converter-1.5.2-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1.jar" sourcepath="M2_REPO/com/liferay/portal/portal-service/6.1.1/portal-service-6.1.1-sources.jar" />
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/icm/cvrg-ecg-converter/1.5.6-SNAPSHOT/cvrg-ecg-converter-1.5.6-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/jfree/jfreechart/1.0.9/jfreechart-1.0.9.jar"/>
   <classpathentry kind="var" path="M2_REPO/jfree/jcommon/1.0.12/jcommon-1.0.12.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/xmlbeans/xmlbeans/2.4.0/xmlbeans-2.4.0.jar"/>
@@ -53,7 +53,7 @@
   <classpathentry kind="var" path="M2_REPO/org/cvrgrid/hl7aecg/hl7aECG/1.1-SNAPSHOT/hl7aECG-1.1-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/hl7OrgV3/aecg/1.0/aecg-1.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-annotations/1.0-SNAPSHOT/cvrg-annotations-1.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/sierraecg/jsierraecg/1.0-SNAPSHOT/jsierraecg-1.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/cvrgrid/philips/Phlilips1.04/1.0-SNAPSHOT/Phlilips1.04-1.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/cvrgrid/schiller/schiller-data/1.0-SNAPSHOT/schiller-data-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/edu/jhu/cvrg/cvrg-opentsdb-client/0.7.6-SNAPSHOT/cvrg-opentsdb-client-0.7.6-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.3/gson-2.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.4/commons-io-2.4.jar"/>
 </classpath>
