--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>edu.jhu.cvrg</groupId>
+  <groupId>edu.jhu.cvrg.services</groupId>
   <artifactId>cvrg-services</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1-SNAPSHOT</version>
   <name>cvrg-services</name>
   <url>http://maven.apache.org</url>
 
@@ -40,7 +40,7 @@
 	<dependency>
 	    <groupId>edu.jhu.cvrg</groupId>
 	    <artifactId>cvrg-dataStorage</artifactId>
-	    <version>1.0-SNAPSHOT</version>
+	    <version>1.2-SNAPSHOT</version>
 	    <scope>provided</scope>
 	</dependency>
 	<dependency>
@@ -52,12 +52,6 @@
 	    <groupId>edu.jhu.cvrg.waveform</groupId>
   		<artifactId>waveform-utilities</artifactId>
 	    <version>1.0-SNAPSHOT</version>
-	</dependency>
-	<dependency>
-		<groupId>edu.jhu.icm</groupId>
-		<artifactId>ECG_Converter4</artifactId>
-		<version>1.0-SNAPSHOT</version>
-		<scope>provided</scope>
 	</dependency>
 	<dependency>
 		<groupId>edu.jhu.cvrg</groupId>
@@ -79,9 +73,19 @@
 	<dependency>
 	    <groupId>org.cvrgrid.schiller</groupId>
   		<artifactId>schiller-data</artifactId>
-	    <version>1.0-SNAPSHOT</version>
+	    <version>1.1-SNAPSHOT</version>
 	    <scope>provided</scope>
 	</dependency>
+	<dependency>
+  		<groupId>edu.jhu.icm</groupId>
+  		<artifactId>cvrg-ecg-converter</artifactId>
+  		<version>1.5.6-SNAPSHOT</version>
+	</dependency>
+		<dependency>
+  			<groupId>edu.cvrg</groupId>
+  			<artifactId>cvrg-timeseriesstore</artifactId>
+  			<version>1.0.2-SNAPSHOT</version>
+		</dependency>
   </dependencies>
   
   <build>
